<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.myapplication.FragmentMain"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/llDays"

        android:layout_width="wrap_content"
        android:layout_height="346dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <Button
            android:id="@+id/bMonday"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/round_button"
            android:onClick="onClick"
            android:text="@string/b_Monday"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@color/icons" />

        <Button
            android:id="@+id/bTuesday"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/round_button"
            android:onClick="onClick"
            android:text="@string/b_Tuesday"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@color/icons" />

        <Button
            android:id="@+id/bWednesday"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/round_button"
            android:onClick="onClick"
            android:text="@string/b_Wednesday"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@color/icons"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="151dp" />

        <Button
            android:id="@+id/bThuersday"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/round_button"
            android:onClick="onClick"
            android:text="@string/b_Thursday"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@color/icons"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="344dp" />

        <Button
            android:id="@+id/bFriday"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/round_button"
            android:onClick="onClick"
            android:text="@string/b_Friday"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@color/icons"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="245dp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/flSchedule"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/llDays"
        app:layout_constraintStart_toEndOf="@+id/llDays"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

</android.support.constraint.ConstraintLayout>