<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_centerHorizontal="true"

    >

    <TextView
        android:id="@+id/b_Monday_pair1"
        android:layout_width="352dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_monday_pair1"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="64dp" />

    <View

        android:id="@+id/view4"
        android:layout_width="352dp"
        android:layout_height="1dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_Monday_pair1" />

    <TextView
        android:id="@+id/b_Monday_pair2"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="8dp"

        android:text="@string/tv_Monday_pair2"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <View
        android:id="@+id/view"
        android:layout_width="352dp"
        android:layout_height="1dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_Monday_pair3" />

    <TextView
        android:id="@+id/b_Monday_pair3"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="64dp"

        android:layout_marginTop="8dp"
        android:text="@string/tv_Monday_pair3"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <View
        android:id="@+id/view3"
        android:layout_width="352dp"
        android:layout_height="1dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="8dp"

        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_Monday_pair2" />

    <TextView
        android:id="@+id/b_Monday_pair4"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_Monday_pair4"

        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <View
        android:id="@+id/view5"
        android:layout_width="352dp"
        android:layout_height="1dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_Monday_pair4" />

</android.support.constraint.ConstraintLayout>
